--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,10 +3,12 @@ nav:
   - 文档说明: index.md
   - 平台介绍: platform.md
   - sdk结构:
-    - 总览: sdk.md
-    - 热身赛: test_race_sdk.md
+    - 总览: sdk_structure/sdk.md
+    - 热身赛: sdk_structure/test_race_sdk.md
+  - 播放器使用说明:
+    - 热身赛: player/test_race.md
   - 开发引导:
-    - 热身赛: test_race.md
+    - 热身赛: instruction/test_race.md
 theme:
   logo: imgs/icon.jpg
   favicon: imgs/icon.jpg
