--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,7 +6,7 @@ nav:
     - 总览: sdk_structure/sdk.md
     - 热身赛: sdk_structure/test_race_sdk.md
   - 播放器使用说明:
-    - 总览: player/player.md
+    - 总览: player/test_race.md
   - 开发引导:
     - 热身赛: instruction/test_race.md
 theme:
