docs: sdk and api

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,13 +2,20 @@ site_name: 智能体大赛引导文档
 nav:
   - 文档说明: index.md
   - 平台介绍: platform.md
+  - 游戏概述: 
+    # - 游戏简介: pacman.md
+    # - 通信文档: pacman_api.md
   - sdk结构:
     - 总览: sdk_structure/sdk.md
     - 热身赛: sdk_structure/test_race_sdk.md
+    # - 吃豆人: sdk_structure/pacman_sdk.md
   - 播放器使用说明:
-    - 总览: player/test_race.md
+    - 总览: player/player.md
+    - 热身赛: player/test_race.md
+    # - 吃豆人: player/pacman.md
   - 开发引导:
     - 热身赛: instruction/test_race.md
+    # - 吃豆人: instruction/pacman.md
 theme:
   logo: imgs/icon.jpg
   favicon: imgs/icon.jpg
